- Restructured the solution to reduce the number of assemblies - Fixed the app service communication channel for the foreground - Implemented the communication channels for foreground and signaling - Code cleanup and refactoring

--- a/ChatterBox.Client.Common/ChatterBox.Client.Common.csproj
+++ b/ChatterBox.Client.Common/ChatterBox.Client.Common.csproj
@@ -55,7 +55,7 @@
     <Compile Include="Communication\Foreground\IForegroundCommunicationChannel.cs" />
     <Compile Include="Communication\Signaling\Dto\ConnectionOwner.cs" />
     <Compile Include="Communication\Signaling\Dto\ConnectionStatus.cs" />
-    <Compile Include="Communication\Signaling\ISignalingCommunicationChannel.cs" />
+    <Compile Include="Communication\Signaling\ISignalingSocketChannel.cs" />
     <Compile Include="Notifications\ToastNotificationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings\RegistrationSettings.cs" />
