--- a/ChatterBox.Client.Universal.BackgroundHost/ChatterBox.Client.Universal.BackgroundHost.vcxproj
+++ b/ChatterBox.Client.Universal.BackgroundHost/ChatterBox.Client.Universal.BackgroundHost.vcxproj
@@ -27,16 +27,16 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="OutOfProcessHost.cpp" />
-  </ItemGroup>
-  <ItemGroup>
     <AppxManifest Include="..\ChatterBox.Client.Universal\package.appxmanifest" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="BackgroundHost.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{95dd9396-0b78-4ca6-9508-995fffa8cb87}</ProjectGuid>
+    <ProjectGuid>{4497E847-8611-4545-BDBE-CE9744C7013C}</ProjectGuid>
     <Keyword>WindowsRuntimeComponent</Keyword>
-    <ProjectName>ChatterBox.Client.Universal.OutOfProcessHost</ProjectName>
-    <RootNamespace>ChatterBox_Client_Universal_OutOfProcessHost</RootNamespace>
+    <ProjectName>ChatterBox.Client.Universal.BackgroundHost</ProjectName>
+    <RootNamespace>ChatterBox_Client_Universal_BackgroundHost</RootNamespace>
     <DefaultLanguage>en-US</DefaultLanguage>
     <MinimumVisualStudioVersion>14.0</MinimumVisualStudioVersion>
     <AppContainerApplication>true</AppContainerApplication>
@@ -106,18 +106,21 @@
   <PropertyGroup />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <GenerateManifest>false</GenerateManifest>
+    <OutDir>$(ProjectDir)bin\$(Platform)\$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <GenerateManifest>false</GenerateManifest>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
     <GenerateManifest>false</GenerateManifest>
+    <OutDir>$(ProjectDir)bin\$(Platform)\$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
     <GenerateManifest>false</GenerateManifest>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <GenerateManifest>false</GenerateManifest>
+    <OutDir>$(ProjectDir)bin\$(Platform)\$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <GenerateManifest>false</GenerateManifest>
