--- a/ChatterBox.Client.Universal.Background/ChatterBox.Client.Universal.Background.csproj
+++ b/ChatterBox.Client.Universal.Background/ChatterBox.Client.Universal.Background.csproj
@@ -108,11 +108,13 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AppServiceConnectionHub.cs" />
+    <Compile Include="ForegroundClient.cs" />
+    <Compile Include="Hub.cs" />
+    <Compile Include="DeferralWrappers\AppServiceDeferralWrapper.cs" />
+    <Compile Include="DeferralWrappers\BackgroundTaskDeferralWrapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SignalingSocketService.cs" />
     <Compile Include="Tasks\ForegroundAppServiceTask.cs" />
-    <Compile Include="Tasks\SignalingAppServiceTask.cs" />
     <Compile Include="Tasks\SignalingTask.cs" />
     <Compile Include="Tasks\VoipTask.cs" />
   </ItemGroup>
@@ -120,10 +122,6 @@
     <ProjectReference Include="..\ChatterBox.Client.Common\ChatterBox.Client.Common.csproj">
       <Project>{9E96F63A-7E37-4F90-B9A2-93DA25E663A1}</Project>
       <Name>ChatterBox.Client.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ChatterBox.Client.Universal.Common\ChatterBox.Client.Universal.Common.csproj">
-      <Project>{916AA413-7819-4210-9C8C-FB48FA996247}</Project>
-      <Name>ChatterBox.Client.Universal.Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\ChatterBox.Common.Communication\ChatterBox.Common.Communication.csproj">
       <Project>{5EE2034E-0977-42B0-8F9D-5F65BDACCFF4}</Project>
