--- a/ChatterBox.Client.Universal/ChatterBox.Client.Universal.csproj
+++ b/ChatterBox.Client.Universal/ChatterBox.Client.Universal.csproj
@@ -17,7 +17,8 @@
     <EnableDotNetNativeCompatibleProfile>true</EnableDotNetNativeCompatibleProfile>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <PackageCertificateKeyFile>ChatterBox.Client.Universal_TemporaryKey.pfx</PackageCertificateKeyFile>
+    <PackageCertificateKeyFile>ChatterBox.Client.Universal_StoreKey.pfx</PackageCertificateKeyFile>
+    <PackageCertificateThumbprint>C2678F5CA79C429C4C5873A13448BA99D429140E</PackageCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|ARM'">
     <DebugSymbols>true</DebugSymbols>
@@ -93,6 +94,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="ChatterBox.Client.Universal_StoreKey.pfx" />
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
@@ -100,7 +102,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\ForegroundAppServiceClient.cs" />
+    <Compile Include="Services\HubClient.cs" />
     <Compile Include="Services\TaskHelper.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -110,6 +112,7 @@
     <None Include="ChatterBox.Client.Universal_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Package.StoreAssociation.xml" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
@@ -130,17 +133,13 @@
       <Project>{9E96F63A-7E37-4F90-B9A2-93DA25E663A1}</Project>
       <Name>ChatterBox.Client.Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ChatterBox.Client.Universal.BackgroundHost\ChatterBox.Client.Universal.BackgroundHost.vcxproj">
+      <Project>{4497e847-8611-4545-bdbe-ce9744c7013c}</Project>
+      <Name>ChatterBox.Client.Universal.BackgroundHost</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ChatterBox.Client.Universal.Background\ChatterBox.Client.Universal.Background.csproj">
       <Project>{626BEE3A-EB2F-415F-9E30-9AAF6B9C430A}</Project>
       <Name>ChatterBox.Client.Universal.Background</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ChatterBox.Client.Universal.Common\ChatterBox.Client.Universal.Common.csproj">
-      <Project>{916AA413-7819-4210-9C8C-FB48FA996247}</Project>
-      <Name>ChatterBox.Client.Universal.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ChatterBox.Client.Universal.OutOfProcessHost\ChatterBox.Client.Universal.OutOfProcessHost.vcxproj">
-      <Project>{95dd9396-0b78-4ca6-9508-995fffa8cb87}</Project>
-      <Name>ChatterBox.Client.Universal.OutOfProcessHost</Name>
     </ProjectReference>
     <ProjectReference Include="..\ChatterBox.Common.Communication\ChatterBox.Common.Communication.csproj">
       <Project>{5EE2034E-0977-42B0-8F9D-5F65BDACCFF4}</Project>
