Refactored code to allow for reuse of the channel invoker over AppService.

--- a/ChatterBox.Client.Universal.Background/ChatterBox.Client.Universal.Background.csproj
+++ b/ChatterBox.Client.Universal.Background/ChatterBox.Client.Universal.Background.csproj
@@ -108,6 +108,7 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helpers\AppServiceChannelHelper.cs" />
     <Compile Include="ForegroundClient.cs" />
     <Compile Include="Hub.cs" />
     <Compile Include="DeferralWrappers\AppServiceDeferralWrapper.cs" />
