--- a/ChatterBox.Client.Common/ChatterBox.Client.Common.csproj
+++ b/ChatterBox.Client.Common/ChatterBox.Client.Common.csproj
@@ -52,10 +52,13 @@
     <TargetPlatform Include="WindowsPhoneApp, Version=8.1" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Communication\Foreground\Dto\VoipState.cs" />
     <Compile Include="Communication\Foreground\IForegroundCommunicationChannel.cs" />
     <Compile Include="Communication\Signaling\Dto\ConnectionOwner.cs" />
     <Compile Include="Communication\Signaling\Dto\ConnectionStatus.cs" />
     <Compile Include="Communication\Signaling\ISignalingSocketChannel.cs" />
+    <Compile Include="Communication\Voip\Dto\SdpAnswer.cs" />
+    <Compile Include="Communication\Voip\IVoipChannel.cs" />
     <Compile Include="Notifications\ToastNotificationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings\RegistrationSettings.cs" />
@@ -74,6 +77,7 @@
       <Name>ChatterBox.Common.Communication</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
