--- a/ChatterBox.Client.Universal.Background/project.json
+++ b/ChatterBox.Client.Universal.Background/project.json
@@ -1,6 +1,7 @@
 ﻿{
   "dependencies": {
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0"
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
+    "WebRTC": "1.1.71"
   },
   "frameworks": {
     "uap10.0": {}
