--- a/ChatterBox.Client.Universal/project.json
+++ b/ChatterBox.Client.Universal/project.json
@@ -4,7 +4,8 @@
     "Microsoft.ApplicationInsights.PersistenceChannel": "1.0.0",
     "Microsoft.ApplicationInsights.WindowsApps": "1.0.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
-    "Unity": "4.0.1"
+    "Unity": "4.0.1",
+    "WebRTC": "1.1.71"
   },
   "frameworks": {
     "uap10.0": {}
