--- a/ChatterBox.Client.Universal.Background/ChatterBox.Client.Universal.Background.csproj
+++ b/ChatterBox.Client.Universal.Background/ChatterBox.Client.Universal.Background.csproj
@@ -114,6 +114,7 @@
     <Compile Include="DeferralWrappers\AppServiceDeferralWrapper.cs" />
     <Compile Include="DeferralWrappers\BackgroundTaskDeferralWrapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SignalingSocketOperation.cs" />
     <Compile Include="SignalingSocketService.cs" />
     <Compile Include="Tasks\ForegroundAppServiceTask.cs" />
     <Compile Include="Tasks\SignalingTask.cs" />
