Modified the application to resume state after startup. Fixed application connection logic to properly connect and register at startup. Modified the signaling update events sent to the client so they're more specialized and trigger less updates in the UI in areas that were not affected. Small code refactor.

--- a/ChatterBox.Client.Common/ChatterBox.Client.Common.csproj
+++ b/ChatterBox.Client.Common/ChatterBox.Client.Common.csproj
@@ -53,7 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Communication\Foreground\Dto\VoipState.cs" />
-    <Compile Include="Communication\Foreground\IForegroundCommunicationChannel.cs" />
+    <Compile Include="Communication\Foreground\IForegroundChannel.cs" />
     <Compile Include="Communication\Signaling\Dto\ConnectionOwner.cs" />
     <Compile Include="Communication\Signaling\Dto\ConnectionStatus.cs" />
     <Compile Include="Communication\Signaling\ISignalingSocketChannel.cs" />
