Changes are made on server to support sending push notification for offline users. Push notification background task is created to handle incoming push notifications.

--- a/ChatterBox.Client.Universal.Background/ChatterBox.Client.Universal.Background.csproj
+++ b/ChatterBox.Client.Universal.Background/ChatterBox.Client.Universal.Background.csproj
@@ -117,6 +117,7 @@
     <Compile Include="SignalingSocketOperation.cs" />
     <Compile Include="SignalingSocketService.cs" />
     <Compile Include="Tasks\ForegroundAppServiceTask.cs" />
+    <Compile Include="Tasks\PushNotificationTask.cs" />
     <Compile Include="Tasks\SignalingTask.cs" />
     <Compile Include="Tasks\VoipTask.cs" />
   </ItemGroup>
