--- a/ChatterBox.Client.Universal/ChatterBox.Client.Universal.csproj
+++ b/ChatterBox.Client.Universal/ChatterBox.Client.Universal.csproj
@@ -103,6 +103,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\HubClient.cs" />
+    <Compile Include="Services\PushNotificationHelper.cs" />
     <Compile Include="Services\TaskHelper.cs" />
   </ItemGroup>
   <ItemGroup>
