--- a/ChatterBox.Server/ChatterBox.Server.csproj
+++ b/ChatterBox.Server/ChatterBox.Server.csproj
@@ -49,25 +49,36 @@
       <HintPath>..\packages\NLog.4.1.1\lib\net45\NLog.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="NotificationsExtensions, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\WnsRecipe.0.1.0.0\lib\net40\NotificationsExtensions.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Runtime.Serialization.Json" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WnsRecipe, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\WnsRecipe.0.1.0.0\lib\net40\WnsRecipe.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChatterBoxServer.cs" />
+    <Compile Include="PushNotificationSender.cs" />
     <Compile Include="RegisteredClient.cs" />
     <Compile Include="Domain.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegisteredClientMessageQueueItem.cs" />
     <Compile Include="UnregisteredConnection.cs" />
+    <Compile Include="WNSAuthentication.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
