--- a/ChatterBox.Server/App.config
+++ b/ChatterBox.Server/App.config
@@ -29,7 +29,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-<system.diagnostics>
+  <system.diagnostics>
     <sources>
       <source name="WNSRecipe" switchValue="Off">
         <listeners>
@@ -39,22 +39,23 @@
             file permissions, creating event sources, etc. For additional information on trace listener configuration, please refer to 
             http://msdn.microsoft.com/en-us/library/ff664708.aspx and http://msdn.microsoft.com/en-us/library/4y5y10s7.aspx.
           -->
-          
+
           <!-- Windows Azure Log -->
           <!--<add name="Azure"    type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />-->
-          
+
           <!-- Windows Event Log -->
           <!--<add name="EventLog" type="System.Diagnostics.EventLogTraceListener, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" initializeData="WNS Recipe Notifications"/>-->
-          
+
           <!-- Delimited text file -->
           <!--<add name="LogFile"  type="System.Diagnostics.DelimitedListTraceListener, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" initializeData="[TRACE FILE NAME (e.g. c:\temp\sampleDelimitedFile.txt)]" />-->
-          
+
           <!-- XML file -->
           <!--<add name="XmlFile"  type="System.Diagnostics.XmlWriterTraceListener, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" initializeData="c:\temp\sampleLogFile.xml" />-->
-          
+
           <!-- Console -->
           <!--<add name="Console"  type="System.Diagnostics.ConsoleTraceListener, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" traceOutputOptions="None"/>-->
         </listeners>
       </source>
     </sources>
-  </system.diagnostics></configuration>
+  </system.diagnostics>
+</configuration>
