ChatterBox Win 8 client knows how to "voip".
Squashed commits:

[86e6b6a] ChatterBox: Voip implementation in win8. (+5 squashed commit)

Squashed commit:

[7326fcf] ChatterBox: IHub implementation added.

[f82243e] ChatterBox: fixed host, port and domain saving in settings view.

[f21973b] Added States for win8 client.

[5a346ed] Voip classes and state machine is broken into interfaces and now it compiles for both win10 and win8 clients.

[5462d3f] ChatterBox win8 client updated. (+3 squashed commit)

[f21973b] Added States for win8 client.

[5a346ed] Voip classes and state machine is broken into interfaces and now it compiles for both win10 and win8 clients.

[5462d3f] ChatterBox win8 client updated. (+1 squashed commits)

[5462d3f] ChatterBox win8 client updated.

--- a/ChatterBox.Client.Universal.Background/ChatterBox.Client.Universal.Background.csproj
+++ b/ChatterBox.Client.Universal.Background/ChatterBox.Client.Universal.Background.csproj
@@ -120,6 +120,11 @@
     <Compile Include="Tasks\PushNotificationTask.cs" />
     <Compile Include="Tasks\SignalingTask.cs" />
     <Compile Include="Tasks\VoipTask.cs" />
+    <Compile Include="Voip\States\HangingUp.cs" />
+    <Compile Include="Voip\States\Idle.cs" />
+    <Compile Include="Voip\States\LocalRinging.cs" />
+    <Compile Include="Voip\States\RemoteRinging.cs" />
+    <Compile Include="Voip\VoipCallContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ChatterBox.Client.Common\ChatterBox.Client.Common.csproj">
