--- a/ChatterBox.Client.Universal/ChatterBox.Client.Universal.nuget.targets
+++ b/ChatterBox.Client.Universal/ChatterBox.Client.Universal.nuget.targets
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="no"?>
 <Project ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup Condition="'$(NuGetPackageRoot)' == ''">
-    <NuGetPackageRoot>C:\Users\winromulus\.nuget\packages\</NuGetPackageRoot>
+    <NuGetPackageRoot>C:\Users\GodAdmin\.nuget\packages\</NuGetPackageRoot>
   </PropertyGroup>
   <ImportGroup>
     <Import Project="$(NuGetPackageRoot)\WebRTC\1.1.71\build\netcore45\WebRTC.targets" Condition="Exists('$(NuGetPackageRoot)\WebRTC\1.1.71\build\netcore45\WebRTC.targets')" />
