--- a/ChatterBox.Client.Win8dot1/ChatterBox.Client.Win8dot1.csproj
+++ b/ChatterBox.Client.Win8dot1/ChatterBox.Client.Win8dot1.csproj
@@ -88,7 +88,6 @@
   <ItemGroup>
     <Compile Include="Channels\ClientChannel.cs" />
     <Compile Include="Channels\SignalingSocketChannel.cs" />
-    <Compile Include="Channels\VoipChannelTemp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
@@ -96,6 +95,11 @@
     <Compile Include="Services\SignalingSocketOperation.cs" />
     <Compile Include="Services\SignalingSocketService.cs" />
     <Compile Include="Services\ForegroundSignalingUpdateService.cs" />
+    <Compile Include="Voip\Hub.cs" />
+    <Compile Include="Voip\States\HangingUp.cs" />
+    <Compile Include="Voip\States\Idle.cs" />
+    <Compile Include="Voip\States\LocalRinging.cs" />
+    <Compile Include="Voip\States\RemoteRinging.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -147,7 +151,9 @@
     <Content Include="Assets\SplashScreen.scale-100.png" />
     <Content Include="Assets\StoreLogo.scale-100.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="..\ChatterBox.Client.Presentation.Shared\ChatterBox.Client.Presentation.Shared.projitems" Label="Shared" />
+  <Import Project="..\ChatterBox.Client.Voip\ChatterBox.Client.Voip.projitems" Label="Shared" />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
   </PropertyGroup>
