--- a/ChatterBox.Client.Common/ChatterBox.Client.Common.csproj
+++ b/ChatterBox.Client.Common/ChatterBox.Client.Common.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Settings\SettingsExtensions.cs" />
     <Compile Include="Settings\SignalingSettings.cs" />
     <Compile Include="Avatars\AvatarLink.cs" />
+    <Compile Include="Signaling\Dto\DtoIceCandidate.cs" />
     <Compile Include="Signaling\ISocketConnection.cs" />
     <Compile Include="Signaling\ISignalingSocketOperation.cs" />
     <Compile Include="Signaling\ISignalingSocketService.cs" />
