--- a/ChatterBox.Client.Universal.Background/ChatterBox.Client.Universal.Background.csproj
+++ b/ChatterBox.Client.Universal.Background/ChatterBox.Client.Universal.Background.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SignalingSocketOperation.cs" />
     <Compile Include="SignalingSocketService.cs" />
+    <Compile Include="StatsManager.cs" />
     <Compile Include="Tasks\ForegroundAppServiceTask.cs" />
     <Compile Include="Tasks\PushNotificationTask.cs" />
     <Compile Include="Tasks\SignalingTask.cs" />
