fix chatterbox nuget package reference

--- a/ChatterBox.Client.Universal.Background/ChatterBox.Client.Universal.Background.nuget.targets
+++ b/ChatterBox.Client.Universal.Background/ChatterBox.Client.Universal.Background.nuget.targets
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="no"?>
 <Project ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup Condition="'$(NuGetPackageRoot)' == ''">
-    <NuGetPackageRoot>C:\Users\GodAdmin\.nuget\packages\</NuGetPackageRoot>
+    <NuGetPackageRoot>C:\Users\testuser\.nuget\packages\</NuGetPackageRoot>
   </PropertyGroup>
   <ImportGroup>
-    <Import Project="$(NuGetPackageRoot)\WebRTC\1.1.71\build\netcore45\WebRTC.targets" Condition="Exists('$(NuGetPackageRoot)\WebRTC\1.1.71\build\netcore45\WebRTC.targets')" />
+    <Import Project="$(NuGetPackageRoot)\WebRTC\1.1.191\build\netcore45\WebRTC.targets" Condition="Exists('$(NuGetPackageRoot)\WebRTC\1.1.191\build\netcore45\WebRTC.targets')" />
   </ImportGroup>
 </Project>
