--- a/ChatterBox.Client.Universal/project.json
+++ b/ChatterBox.Client.Universal/project.json
@@ -1,5 +1,6 @@
 ﻿{
   "dependencies": {
+    "EntityFramework": "6.1.3",
     "Microsoft.ApplicationInsights": "1.2.3",
     "Microsoft.ApplicationInsights.PersistenceChannel": "1.2.3",
     "Microsoft.ApplicationInsights.WindowsApps": "1.1.0",
