--- a/ChatterBox.Client.Win8dot1/ChatterBox.Client.Win8dot1.csproj
+++ b/ChatterBox.Client.Win8dot1/ChatterBox.Client.Win8dot1.csproj
@@ -95,6 +95,9 @@
     <Compile Include="Services\SignalingSocketOperation.cs" />
     <Compile Include="Services\SignalingSocketService.cs" />
     <Compile Include="Services\ForegroundSignalingUpdateService.cs" />
+    <Compile Include="Views\CallView.xaml.cs">
+      <DependentUpon>CallView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Voip\Hub.cs" />
     <Compile Include="Voip\States\HangingUp.cs" />
     <Compile Include="Voip\States\Idle.cs" />
@@ -155,6 +158,12 @@
     <SDKReference Include="Microsoft.VCLibs, Version=12.0">
       <Name>Microsoft Visual C++ 2013 Runtime Package for Windows</Name>
     </SDKReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="Views\CallView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
   </ItemGroup>
   <Import Project="..\ChatterBox.Client.Presentation.Shared\ChatterBox.Client.Presentation.Shared.projitems" Label="Shared" />
   <Import Project="..\ChatterBox.Client.Voip\ChatterBox.Client.Voip.projitems" Label="Shared" />
