--- a/ChatterBox.Client.Common/ChatterBox.Client.Common.csproj
+++ b/ChatterBox.Client.Common/ChatterBox.Client.Common.csproj
@@ -86,9 +86,11 @@
     <Compile Include="Communication\Voip\Dto\Dtos.cs" />
     <Compile Include="Communication\Voip\IVideoRenderHelper.cs" />
     <Compile Include="Communication\Voip\IVoipChannel.cs" />
+    <Compile Include="Helpers\XmlSerializationHelper.cs" />
     <Compile Include="Notifications\PushNotificationHelper.cs" />
     <Compile Include="Notifications\ToastNotificationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings\IceServerSettings.cs" />
     <Compile Include="Settings\RegistrationSettings.cs" />
     <Compile Include="Settings\SettingsExtensions.cs" />
     <Compile Include="Settings\SignalingSettings.cs" />
