Tapping on an instant message toast notification opens ChatterBox and selects the involved conversation. + fixed some warnings
Test scenario #1:
- Start ChatterBox W10/W8.1 on two devices
- On A close the application
- From  B send some instant message to B
- Toast notifications should be visible on A
- Click on one of the received toast notification on A
- ChatterBox should open and the instant messages received while the app was closed, should be visible

--- a/ChatterBox.Client.Common/ChatterBox.Client.Common.csproj
+++ b/ChatterBox.Client.Common/ChatterBox.Client.Common.csproj
@@ -86,8 +86,10 @@
     <Compile Include="Communication\Voip\Dto\Dtos.cs" />
     <Compile Include="Communication\Voip\IVideoRenderHelper.cs" />
     <Compile Include="Communication\Voip\IVoipChannel.cs" />
+    <Compile Include="Helpers\XmlDataContractSerializationHelper.cs" />
     <Compile Include="Helpers\XmlSerializationHelper.cs" />
     <Compile Include="Notifications\PushNotificationHelper.cs" />
+    <Compile Include="Notifications\ToastNotificationLaunchArguments.cs" />
     <Compile Include="Notifications\ToastNotificationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings\IceServerSettings.cs" />
