CB 10 has settings page completed with devices and codecs.

--- a/ChatterBox.Client.Common/ChatterBox.Client.Common.csproj
+++ b/ChatterBox.Client.Common/ChatterBox.Client.Common.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Settings\SettingsExtensions.cs" />
     <Compile Include="Settings\SignalingSettings.cs" />
     <Compile Include="Avatars\AvatarLink.cs" />
+    <Compile Include="Settings\WebRTCSettingsIds.cs" />
     <Compile Include="Signaling\Dto\DtoIceCandidate.cs" />
     <Compile Include="Signaling\ISocketConnection.cs" />
     <Compile Include="Signaling\ISignalingSocketOperation.cs" />
